Changed post-title display to inline-block to fix vertical spacing

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -395,15 +395,13 @@ pre .tag {
  * Posts
  */
 .post {
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 
 .post-header {
 }
 
 .post-title {
-  display: inline;
+  display: inline-block;
 }
 
 .post-content {
